[gd_scene load_steps=13 format=2]

[ext_resource path="res://Scenes/Level.gd" type="Script" id=1]
[ext_resource path="res://Scenes/Slider.gd" type="Script" id=2]
[ext_resource path="res://Scenes/Thrustles.tscn" type="PackedScene" id=3]

[sub_resource type="Gradient" id=2]
colors = PoolColorArray( 0.556863, 0.815686, 1, 1, 0.164706, 0.388235, 1, 1 )

[sub_resource type="GradientTexture" id=3]
gradient = SubResource( 2 )
width = 90

[sub_resource type="Animation" id=4]
resource_name = "Fall"
length = 12.0
tracks/0/type = "value"
tracks/0/path = NodePath(".:texture:gradient:colors")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 12 ),
"transitions": PoolRealArray( 1 ),
"update": 3,
"values": [ PoolColorArray( 0.6764, 0.69776, 0.89, 1, 0.2079, 0.22418, 0.33, 1 ) ]
}

[sub_resource type="Animation" id=5]
length = 0.001
tracks/0/type = "value"
tracks/0/path = NodePath(".:texture:gradient:colors")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0 ),
"transitions": PoolRealArray( 1 ),
"update": 0,
"values": [ PoolColorArray( 0.556863, 0.815686, 1, 1, 0.164706, 0.388235, 1, 1 ) ]
}

[sub_resource type="Animation" id=6]
resource_name = "Winter"
length = 34.0
tracks/0/type = "value"
tracks/0/path = NodePath(".:texture:gradient:colors")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 34 ),
"transitions": PoolRealArray( 1 ),
"update": 3,
"values": [ PoolColorArray( 0.87, 0.87, 0.87, 1, 1, 1, 1, 1 ) ]
}

[sub_resource type="Animation" id=7]
resource_name = "Fall"
length = 12.0
tracks/0/type = "value"
tracks/0/path = NodePath(".:modulate")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0, 12 ),
"transitions": PoolRealArray( 1, 1 ),
"update": 0,
"values": [ Color( 1, 1, 1, 1 ), Color( 0.5, 0.5, 0.5, 1 ) ]
}

[sub_resource type="Animation" id=8]
length = 0.001
tracks/0/type = "value"
tracks/0/path = NodePath(".:modulate")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0 ),
"transitions": PoolRealArray( 1 ),
"update": 0,
"values": [ Color( 1, 1, 1, 1 ) ]
}

[sub_resource type="Animation" id=9]
resource_name = "Winter"
length = 34.0
tracks/0/type = "value"
tracks/0/path = NodePath(".:modulate")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0, 34 ),
"transitions": PoolRealArray( 1, 1 ),
"update": 0,
"values": [ Color( 0.5, 0.5, 0.5, 1 ), Color( 1, 1, 1, 1 ) ]
}

[sub_resource type="RectangleShape2D" id=1]
extents = Vector2( 80, 8 )

[node name="Level" type="StaticBody2D"]
script = ExtResource( 1 )

[node name="Sky" type="Sprite" parent="."]
position = Vector2( 0, 45 )
rotation = 1.5708
scale = Vector2( 1, 160 )
texture = SubResource( 3 )

[node name="Transition" type="AnimationPlayer" parent="Sky"]
anims/Fall = SubResource( 4 )
anims/RESET = SubResource( 5 )
anims/Winter = SubResource( 6 )

[node name="Clouds" type="Node2D" parent="."]
position = Vector2( 0, 19 )
script = ExtResource( 2 )

[node name="Transition" type="AnimationPlayer" parent="Clouds"]
anims/Fall = SubResource( 7 )
anims/RESET = SubResource( 8 )
anims/Winter = SubResource( 9 )

[node name="Trees" type="Node2D" parent="."]
position = Vector2( 0, 74 )
script = ExtResource( 2 )

[node name="Food" type="Node2D" parent="."]
position = Vector2( 0, 74 )
script = ExtResource( 2 )

[node name="Snow" type="Node2D" parent="."]

[node name="Snowfall2" type="CPUParticles2D" parent="Snow"]
visible = false
position = Vector2( 80, 0 )
amount = 2
lifetime = 4.0
emission_shape = 2
emission_rect_extents = Vector2( 160, 1 )
direction = Vector2( -0.5, 1 )
spread = 15.0
gravity = Vector2( 0, 0 )
initial_velocity = 45.0

[node name="Snowfall16" type="CPUParticles2D" parent="Snow"]
visible = false
position = Vector2( 80, 0 )
amount = 16
lifetime = 4.0
emission_shape = 2
emission_rect_extents = Vector2( 160, 1 )
direction = Vector2( -0.5, 1 )
spread = 15.0
gravity = Vector2( 0, 0 )
initial_velocity = 45.0

[node name="Snowfall32" type="CPUParticles2D" parent="Snow"]
visible = false
position = Vector2( 80, 0 )
amount = 32
lifetime = 4.0
emission_shape = 2
emission_rect_extents = Vector2( 160, 1 )
direction = Vector2( -0.5, 1 )
spread = 15.0
gravity = Vector2( 0, 0 )
initial_velocity = 45.0

[node name="Snowfall48" type="CPUParticles2D" parent="Snow"]
visible = false
position = Vector2( 80, 0 )
amount = 48
lifetime = 4.0
emission_shape = 2
emission_rect_extents = Vector2( 160, 1 )
direction = Vector2( -0.5, 1 )
spread = 15.0
gravity = Vector2( 0, 0 )
initial_velocity = 45.0

[node name="Snowfall64" type="CPUParticles2D" parent="Snow"]
visible = false
position = Vector2( 80, 0 )
amount = 64
lifetime = 4.0
emission_shape = 2
emission_rect_extents = Vector2( 160, 1 )
direction = Vector2( -0.5, 1 )
spread = 15.0
gravity = Vector2( 0, 0 )
initial_velocity = 45.0

[node name="Snowfall92" type="CPUParticles2D" parent="Snow"]
visible = false
position = Vector2( 80, 0 )
amount = 92
lifetime = 4.0
emission_shape = 2
emission_rect_extents = Vector2( 160, 1 )
direction = Vector2( -0.5, 1 )
spread = 15.0
gravity = Vector2( 0, 0 )
initial_velocity = 45.0

[node name="Snowfall128" type="CPUParticles2D" parent="Snow"]
visible = false
position = Vector2( 80, 0 )
amount = 128
lifetime = 4.0
emission_shape = 2
emission_rect_extents = Vector2( 160, 1 )
direction = Vector2( -0.5, 1 )
spread = 15.0
gravity = Vector2( 0, 0 )
initial_velocity = 45.0

[node name="Snowfall256" type="CPUParticles2D" parent="Snow"]
visible = false
position = Vector2( 80, 0 )
amount = 256
lifetime = 4.0
emission_shape = 2
emission_rect_extents = Vector2( 160, 1 )
direction = Vector2( -0.5, 1 )
spread = 15.0
gravity = Vector2( 0, 0 )
initial_velocity = 45.0

[node name="GroundSummer" type="Node2D" parent="."]
position = Vector2( 0, 90 )
script = ExtResource( 2 )

[node name="GroundFall" type="Node2D" parent="."]
position = Vector2( 0, 90 )
script = ExtResource( 2 )

[node name="GroundWinter" type="Node2D" parent="."]
position = Vector2( 0, 90 )
script = ExtResource( 2 )

[node name="CollisionShape2D" type="CollisionShape2D" parent="."]
position = Vector2( 80, 82 )
shape = SubResource( 1 )

[node name="Thrustles1" parent="." instance=ExtResource( 3 )]
position = Vector2( -2, 16 )

[node name="Thrustles2" parent="." instance=ExtResource( 3 )]
position = Vector2( -2, 16 )

[node name="Thrustles3" parent="." instance=ExtResource( 3 )]
position = Vector2( -76, 17 )
